--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "css-loader": "^1.0.1",
+    "css-loader": "^2.1.0",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "file-loader": "^3.0.1",
     "nodemon": "^1.18.5",
     "npm-run-all": "^4.1.3",
     "pg": "6.1.6",
     "react-google-maps": "^9.4.5",
-    "style-loader": "^0.23.1"
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
